--- a/index.html
+++ b/index.html
@@ -1,104 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <meta
-            name="viewport"
-            content="width=device-width, minimal-ui, viewport-fit=cover, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
-        />
-        <link rel="icon" type="image/png" href="assets/favicon.png" />
-
-        <title>OGL • Torus</title>
-        <link href="assets/main.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="Info">Laszlo</div>
-        <script type="module">
-            import { Renderer, Camera, Orbit, Transform, Program, Torus, Mesh } from 'https://unpkg.com/ogl';
-
-            const vertex = /* glsl */ `
-                attribute vec3 position;
-                attribute vec3 normal;
-
-                uniform mat3 normalMatrix;
-                uniform mat4 modelViewMatrix;
-                uniform mat4 projectionMatrix;
-
-                varying vec3 vNormal;
-
-                void main() {
-                    vNormal = normalize(normalMatrix * normal);
-                    gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
-                }
-            `;
-
-            const fragment = /* glsl */ `
-                precision highp float;
-
-                varying vec3 vNormal;
-
-                void main() {
-                    gl_FragColor.rgb = normalize(vNormal);
-                    gl_FragColor.a = 1.0;
-                }
-            `;
-
-            {
-                const renderer = new Renderer({ dpr: 2 });
-                const gl = renderer.gl;
-                document.body.appendChild(gl.canvas);
-                gl.clearColor(1, 1, 1, 1);
-
-                const camera = new Camera(gl, { fov: 35 });
-                camera.position.set(5, 3, 6);
-                camera.lookAt([0, 0, 0]);
-
-                function resize() {
-                    renderer.setSize(window.innerWidth, window.innerHeight);
-                    camera.perspective({ aspect: gl.canvas.width / gl.canvas.height });
-                }
-                window.addEventListener('resize', resize, false);
-                resize();
-
-                const scene = new Transform();
-                const controls = new Orbit(camera);
-
-                const program = new Program(gl, {
-                    vertex,
-                    fragment,
-                });
-
-                const torusGeometry = new Torus(gl, {
-                    radius: 1,
-                    tube: 0.4,
-                    radialSegments: 16,
-                    tubularSegments: 32,
-                });
-
-                console.log(torusGeometry);
-
-                const torus = new Mesh(gl, { geometry: torusGeometry, program });
-                torus.setParent(scene);
-
-                const torus1 = new Mesh(gl, { geometry: torusGeometry, program });
-                torus.setParent(scene);
-
-                const torus2 = new Mesh(gl, { geometry: torusGeometry, program });
-                torus.setParent(scene);
-
-                requestAnimationFrame(update);
-                function update() {
-                    requestAnimationFrame(update);
-                    torus.rotation.x += 0.001;
-                    torus.rotation.y += 0.005;
-                    torus.rotation.z += 0.003;
-
-                    controls.update();
-
-                    renderer.render({ scene, camera });
-                }
-            }
-        </script>
-    </body>
+<html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    
+   <script></script>
+    <script src="secondSketch.js"></script>
+    <link rel="stylesheet" href="assets/main.css">
+  </head>
+  <body>
+    <div id="global wrapper">
+    <div id="content-wrapper">
+      <div id="header">
+        <h2>LAZSLO MOHOLY-NAGY</h2>
+        <p>Dieses Projekt zeigt die Bilder Lazslo Moholy Nagys in einer 3Dimensionalen visualisierung.
+          Diese 3Dimensionalen Räume lassen sich durch das bewegen der Maus erleben.
+        </p>
+        <div id="image-wrapper">
+          <img class="lazslo-images" src="assets/images/image.png" alt="">
+          <img class="lazslo-images" src="assets/images/image-2.png" alt="">
+          <img class="lazslo-images" src="assets/images/image-3.png" alt="">
+          <img class="lazslo-images" src="assets/images/image-4.png" alt="">
+        </div>
+        <div id="sketch-wrapper">
+          <div id="c1"></div> <br>
+	<div id="c2"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </body>
 </html>
