--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    
-   <script></script>
-    <script src="secondSketch.js"></script>
-    <link rel="stylesheet" href="assets/main.css">
-  </head>
-  <body>
-    <div id="global wrapper">
+
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+
+  <script></script>
+  <script src="secondSketch.js"></script>
+  <link rel="stylesheet" href="assets/main.css">
+</head>
+
+<body>
+  <div id="global wrapper">
     <div id="content-wrapper">
       <div id="header">
         <h2>LAZSLO MOHOLY-NAGY</h2>
@@ -15,17 +17,18 @@
           Diese 3Dimensionalen Räume lassen sich durch das bewegen der Maus erleben.
         </p>
         <div id="image-wrapper">
-          <img class="lazslo-images" src="assets/images/image.png" alt="">
-          <img class="lazslo-images" src="assets/images/image-2.png" alt="">
-          <img class="lazslo-images" src="assets/images/image-3.png" alt="">
-          <img class="lazslo-images" src="assets/images/image-4.png" alt="">
+          <img class="lazslo-images" src="assets/images/image.jpg" alt="">
+          <img class="lazslo-images" src="assets/images/image-2.jpg" alt="">
+          <img class="lazslo-images" src="assets/images/image-3.jpg" alt="">
+          <img class="lazslo-images" src="assets/images/image-4.jpg" alt="">
         </div>
         <div id="sketch-wrapper">
           <div id="c1"></div> <br>
-	<div id="c2"></div>
+          <div id="c2"></div>
         </div>
       </div>
     </div>
   </div>
-  </body>
+</body>
+
 </html>
