--- a/index.html
+++ b/index.html
@@ -4,31 +4,37 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
 
   <script></script>
-  <script src="secondSketch.js"></script>
+  <script type="module" src="index.js"></script>
   <link rel="stylesheet" href="assets/main.css">
 </head>
 
 <body>
-  <div id="global wrapper">
+  <main>
     <div id="content-wrapper">
       <div id="header">
+
         <h2>LAZSLO MOHOLY-NAGY</h2>
+
         <p>Dieses Projekt zeigt die Bilder Lazslo Moholy Nagys in einer 3Dimensionalen visualisierung.
           Diese 3Dimensionalen Räume lassen sich durch das bewegen der Maus erleben.
         </p>
+
         <div id="image-wrapper">
           <img class="lazslo-images" src="assets/images/image.jpg" alt="">
           <img class="lazslo-images" src="assets/images/image-2.jpg" alt="">
           <img class="lazslo-images" src="assets/images/image-3.jpg" alt="">
           <img class="lazslo-images" src="assets/images/image-4.jpg" alt="">
         </div>
+
         <div id="sketch-wrapper">
-          <div id="c1"></div> <br>
+          <div id="c1"></div>
           <div id="c2"></div>
+          <div id="c3"></div>
         </div>
+
       </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
