--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <h2>LAZSLO MOHOLY-NAGY</h2>
 
-        <p>Dieses Projekt zeigt die Bilder Lazslo Moholy Nagys in einer 3Dimensionalen visualisierung.
-          Diese 3Dimensionalen Räume lassen sich durch das bewegen der Maus erleben.
+        <p>Dieses Projekt zeigt die Bilder Lazslo Moholy-Nagys in einer 3Dimensionalen Visualisierung.
+          Diese 3Dimensionalen Räume lassen sich durch das Bewegen der Maus erleben.
         </p>
 
         <div id="image-wrapper">
