feat: make it look more artsy

--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
 
 <body>
   <main>
-    <div id="content-wrapper">
-      <div id="header">
+    <div id="header">
 
-        <h2>LAZSLO MOHOLY-NAGY</h2>
+      <h1>LAZSLO MOHOLY-NAGY</h1>
 
-        <p>Dieses Projekt zeigt die Bilder Lazslo Moholy-Nagys in einer 3Dimensionalen Visualisierung.
-          Diese 3Dimensionalen Räume lassen sich durch das Bewegen der Maus erleben.
-        </p>
+      <p>Dieses Projekt zeigt die Bilder Lazslo Moholy-Nagys in einer 3Dimensionalen Visualisierung.
+        Diese 3Dimensionalen Räume lassen sich durch das Bewegen der Maus erleben.
+      </p>
 
-        <div id="image-wrapper">
-          <img class="lazslo-images" src="assets/images/image.jpg" alt="">
-          <img class="lazslo-images" src="assets/images/image-2.jpg" alt="">
-          <img class="lazslo-images" src="assets/images/image-3.jpg" alt="">
-          <img class="lazslo-images" src="assets/images/image-4.jpg" alt="">
-        </div>
-
-        <div id="sketch-wrapper">
-          <div id="c1"></div>
-          <div id="c2"></div>
-          <div id="c3"></div>
-        </div>
-
-      </div>
     </div>
+
+    <div id="image-wrapper">
+      <img class="lazslo-images" src="assets/images/image.jpg" alt="">
+      <img class="lazslo-images" src="assets/images/image-2.jpg" alt="">
+      <img class="lazslo-images" src="assets/images/image-3.jpg" alt="">
+      <img class="lazslo-images" src="assets/images/image-4.jpg" alt="">
+    </div>
+
+    <div id="c1" class="sketch-wrapper">
+      <i>sketch01</i>
+    </div>
+    <div id="c2" class="sketch-wrapper">
+      <i>sketch02</i>
+    </div>
+    <div id="c3" class="sketch-wrapper">
+      <i>sketch03</i>
+    </div>
+
   </main>
 </body>
 
