--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-
-  <script></script>
+  <title>LAZSLO MOHOLY-NAGY</title>
   <script type="module" src="index.js"></script>
+  <script src="assets/p5.js"></script>
   <link rel="stylesheet" href="assets/main.css">
 </head>
 
@@ -35,6 +34,12 @@
     </div>
     <div id="c3" class="sketch-wrapper">
       <i>sketch03</i>
+    </div>
+    <div id="c4" class="sketch-wrapper">
+      <div class="bottom">
+        <i>sketch04</i>
+        <button id="c4-new">*new*</button>
+      </div>
     </div>
 
   </main>
